[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-graph"
version = "0.1.0"
description = "Learn structural embeddings from agent trajectories for context-aware graph exploration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Context Graph Contributors"}
]
keywords = [
    "graph",
    "embeddings",
    "trajectories",
    "random-walk",
    "machine-learning",
    "context",
    "incident-investigation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "networkx>=3.0",
]
all = [
    "context-graph[dev,docs,viz]",
]

[project.urls]
Homepage = "https://github.com/yourusername/context-graph"
Documentation = "https://github.com/yourusername/context-graph#readme"
Repository = "https://github.com/yourusername/context-graph"
Issues = "https://github.com/yourusername/context-graph/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_graph*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=context_graph --cov-report=term-missing"
